--- a/0x06-unittests_in_js/10-api/package.json
+++ b/0x06-unittests_in_js/10-api/package.json
@@ -8,13 +8,14 @@
     },
     "author": "",
     "license": "ISC",
-    "dependencies": {
-        "express": "^4.17.1"
-    },
     "devDependencies": {
+        "body-parser": "^1.20.2",
         "chai": "^4.2.0",
+        "express": "^4.18.2",
+        "jest": "^29.5.0",
         "mocha": "^6.2.3",
         "request": "^2.88.0",
-        "sinon": "^7.5.0"
+        "sinon": "^7.5.0",
+        "supertest": "^6.3.3"
     }
 }
